XMLtoCSV/objects/unpackaged/objects/PCYC_Call_Compliance_Resolution__c.object
<CustomObject>
    <fields>
        <fullName>PCYC_Call_Number__c</fullName>
        <label>Call</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>160</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_HCP_Resolution__c</fullName>
        <label>Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Rep has been counseled to verify specialty before detailing and to detail only approved HCPs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep confirmed that the incident occurred due to untimely synchronization. Rep has been counseled to synchronize more frequently.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep not available for counseling due to separation.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep not available for counseling due to absence.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep has been counseled to make appropriate HCP associations for non-physicians.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep confirmed incident is due to HCP initiated interaction; counseled to request specialty before engaging.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed the HCP is approved. Business rule has not been updated yet in Veeva. Effective on July 28</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Call Management Resolution</label>
    <listViews>
        <fullName>Call_Compliance_Resolution</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Call_Number__c</columns>
        <columns>PCYC_HCP_Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <label>Call Compliance Resolution</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CCR-{0}</displayFormat>
        <label>Call Management Resolution#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Management Resolutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>